# om-mcp

./: .gitignore  .mcp.json  API_LIST.md  BEST_PRACTICES.md  CLAUDE.md  README.md  pyproject.toml  server.py  template.yaml  test_tool_generator.py
.claude/commands/: fix-apis.md
api-docs/SIG/: SIG的组织成员信息.ms  group.json
api-docs/datastat/: group.json
api-docs/datastat/SIG贡献页面/: SIG列表.ms  group.json
api-docs/会议/: group.json  会议参会人查询.ms  社区会议预定查询.ms
api-docs/社区/: group.json  社区组织成员详情.ms  社区组织架构.ms
api-docs/社区质量/: 健康度指标.ms  搜索指数.ms  有效评论数.ms  组织多样性.ms  贡献指标.ms  项目集成引用度.ms
api-docs/社区运营质量/: TOPN用户留存率.ms  YTD下载量.ms  group.json  严重缺陷数.ms  健康度指标.ms  搜索指数.ms  有效评论数.ms  组织多样性.ms  缺陷数.ms  论坛指标.ms  负向事件.ms  贡献指标.ms  项目集成引用度.ms
api-docs/通用查询/: group.json  issue汇总分页.ms  开发者.ms
lib/: apidocs_loader.py  http.py  response_formatter.py  template_loader.py  tool_generator.py
reports/: cannopen_community_quality_monthly_202603.md  example_community_quality_monthly_202603.md  mindie_community_quality_monthly_202603.md  openeuler_community_quality_monthly_202603.md  opengauss_community_quality_monthly_202603.md  pta_community_quality_monthly_202603.md
test/: README.md  api_test_results.md  test_mcp.py
tools/: cla_apis.py  custom_formatters.py  general_apis.py  generate_token.py  project_apis.py  query_apis.py  server_apis.py
tools/templates/: get_community_contribute.yaml  get_community_health.yaml  get_issues_aggregate.yaml
