[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "om-mcp"
version = "0.1.0"
description = "OpenMetrics MCP Server - 为 Claude Desktop 提供开源社区数据查询能力"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]",
    "httpx",
    "pyyaml",
]

[project.scripts]
om-mcp = "server:main"
